<package format="2">
  <name>urdf</name>
  <version>1.13.2</version>
  <description>
    This package contains a C++ parser for the Unified Robot Description
    Format (URDF), which is an XML format for representing a robot model.
    The code API of the parser has been through our review process and will remain
    backwards compatible in future releases.
  </description>

  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urdf</url>
  <url type="repository">https://github.com/ros/urdf</url>
  <url type="bugtracker">https://github.com/ros/urdf/issues</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <depend version_gte="1.1">urdfdom_headers</depend>
  <depend version_gte="1.1">urdfdom</depend>
  <depend>rosconsole_bridge</depend>
  <depend>roscpp</depend>
  <build_depend>urdf_parser_plugin</build_depend>
  <depend>pluginlib</depend>
  <build_depend>cmake_modules</build_depend>
  <depend>tinyxml</depend>
  <depend>tinyxml2</depend>

  <test_depend>rostest</test_depend>
</package>
